--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
         <attr name="text" format="string"/>
         <attr name="textColor" format="color"/>
         <attr name="backgroundColor" format="color"/>
+        <attr name="first" format="boolean"/>
     </declare-styleable>
 </resources>
